almost new version

--- a/lang/lang_ge.properties
+++ b/lang/lang_ge.properties
@@ -58,8 +58,8 @@ ERROR_MINLENGTH_TEXT_2=ციფრი
 ERROR_EXPIRED=ბარათის ვადა ამოწურულია
 ERROR_LATIN_CHARS_ONLY=აღნიშნული ველის შევსება უნდა მოხდეს ლათინურად
 SAVE_CARD=ბარათის ნომრის დამახსოვრება
-ABOUT_CVV=ბარათის უკანა<br/> მხარეს მოცემული<br/> 3 ციფრი
-ABOUT_CSC=ბარათის წინა<br/> მხარეს მოცემული<br/> 4 ციფრი
+ABOUT_CVV=ბარათის უკანა მხარეს მოცემული ბოლო სამი ციფრი
+ABOUT_CSC=ბარათის წინა მხარეს მოცემული ბოლო ოთხი ციფრი
 
 WAIT_PLEASE_MESSAGE=მიმდინარეობს მოთხოვნის დამუშავება. გთხოვთ, დაელოდეთ.
 PAGE_EXPIRED_MESSAGE=ეს გვერდი მოძველდა. ოპერაციის გაგრძელებისთვის დააჭირეთ <a href="{$CONTINUE_URL}">აქ</a>.
